--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
                                 <h2 class="projects-title">Password Manager</h2>
 
-                                <a target="_blank" href="https://abdullah-github-copilot.github.io/PassWord-Manager/index.html" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/PassWord-Manager/" class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -472,7 +472,7 @@
 
                                 <h2 class="projects-title">Head Phone</h2>
 
-                                <a target="_blank" href="https://abdullah-github-copilot.github.io/HeadPhone-LandingPage/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/HeadPhone-Animated-LandingPage/" class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -486,7 +486,7 @@
 
                                 <h2 class="projects-title">Tic Tac Toe Game</h2>
 
-                                <a target="_blank" href="https://abdullah-github-copilot.github.io/Tic-Tac-Toe_Game/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Tic-Tac-Toe-Game/" class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -528,7 +528,7 @@
 
                                 <h2 class="projects-title">Snake Game</h2>
 
-                                <a target="_blank" href="https://abdullah-github-copilot.github.io/Snake-Game/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Snake-Game/" class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -556,7 +556,7 @@
 
                                 <h2 class="projects-title">Air Hockey Game</h2>
 
-                                <a target="_blank" href="https://abdullah-github-copilot.github.io/Air-Hockey-Game/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Air-hockey-game/" class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -570,7 +570,7 @@
 
                                 <h2 class="projects-title">Memory Card Game</h2>
 
-                                <a target="_blank" href="https://abdullah-github-copilot.github.io/Memory-Card_Game" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Memory-Card-Game/" class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -584,7 +584,7 @@
 
                                 <h2 class="projects-title">Rock Paper Scissor Game</h2>
 
-                                <a target="_blank" href="https://abdullah-github-copilot.github.io/Rock-Paper-Scissor/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Rock-Paper-Scissor-Game/" class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -598,7 +598,7 @@
 
                                 <h2 class="projects-title">Watches Landing Page</h2>
 
-                                <a target="_blank" href="https://abdullah-github-copilot.github.io/Watches-landing-page/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Watches-Landing-Page/" class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -693,12 +693,6 @@
             </div>
         </div>
     </footer>
-
-    fossil
-
-Gen 5
-
-$359.00
 
     <!-- Box icons -->
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
