--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                             <span class=" link-text">About</span>
                         </a>
                     </li>
-                    <li class="nav-list">
+                    <!-- <li class="nav-list">
                         <a href="#education" class="link-item">
                             <i class="fa-solid fa-graduation-cap link-icon"></i>
                             <span class="link-text">Education</span>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-list">
                         <a href="#skills" class="link-item">
                             <i class='bx bxs-bar-chart-square link-icon'></i>
@@ -331,7 +331,7 @@
             </div>
         </section> -->
 
-        <!--========================= Projects 222 =========================-->
+        <!--========================= Projects main =========================-->
         <section class="projects" id="projects" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
             <h1 class="heading heading3">My <span class="heading-span2">Projects</span></h1>
 
