favicon added and projects added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/Images/favicon.png">
+
     <!-- Box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -78,21 +81,26 @@
     <main>
         <!--========================= Home =========================-->
         <section class="home" id="home">
-            <div class="home-content" >
-                <h1 class="heading heading3" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">Hello, I am <span class="heading-span2">Abdullah Asif</span>
+            <div class="home-content">
+                <h1 class="heading heading3" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">Hello,
+                    I am <span class="heading-span2">Abdullah Asif</span>
                 </h1>
 
                 <div class="text-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500">
                     <h3 class="typed">Full-Stack Developer</h3>
                 </div>
-                <p data-aos="fade-right" data-aos-duration="1000" data-aos-delay="700">Crafting digital experiences with precision and passion – I am a Full Stack Web Developer dedicated to turning ideas into interactive and seamless online realities.</p>
+                <p data-aos="fade-right" data-aos-duration="1000" data-aos-delay="700">Crafting digital experiences with
+                    precision and passion – I am a Full Stack Web Developer dedicated to turning ideas into interactive
+                    and seamless online realities.</p>
 
-                <div class="btn-box btn-home" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="900" data-aos-once="true">
+                <div class="btn-box btn-home" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="900"
+                    data-aos-once="true">
                     <a style="height: auto;" href="#contact" class="btn">Hire Me </a>
                     <!-- <a href="#" class="btn">Download CV</a> -->
                 </div>
 
-                <div class="home-sci" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="1100" data-aos-once="true">
+                <div class="home-sci" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="1100"
+                    data-aos-once="true">
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
@@ -115,7 +123,10 @@
 
             <div class="about-content">
                 <h3>Full-Stack Developer</h3>
-                <p>Hello there! I'm a Full Stack Web Developer with a knack for turning cool ideas into awesome websites. I love blending creativity with coding magic to make online experiences that are not just functional but also look pretty darn good. Let's build something amazing together and make the web a more awesome place!</p>
+                <p>Hello there! I'm a Full Stack Web Developer with a knack for turning cool ideas into awesome
+                    websites. I love blending creativity with coding magic to make online experiences that are not just
+                    functional but also look pretty darn good. Let's build something amazing together and make the web a
+                    more awesome place!</p>
 
                 <div class="btn-box btns">
                     <a href="#contact" class="btn">Contact Me</a>
@@ -458,7 +469,8 @@
 
                                 <h2 class="projects-title">Password Manager</h2>
 
-                                <a target="_blank" href="https://abdullahasif24.github.io/PassWord-Manager/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/PassWord-Manager/"
+                                    class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -472,7 +484,9 @@
 
                                 <h2 class="projects-title">Head Phone</h2>
 
-                                <a target="_blank" href="https://abdullahasif24.github.io/HeadPhone-Animated-LandingPage/" class="projects-button">
+                                <a target="_blank"
+                                    href="https://abdullahasif24.github.io/HeadPhone-Animated-LandingPage/"
+                                    class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -486,7 +500,8 @@
 
                                 <h2 class="projects-title">Tic Tac Toe Game</h2>
 
-                                <a target="_blank" href="https://abdullahasif24.github.io/Tic-Tac-Toe-Game/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Tic-Tac-Toe-Game/"
+                                    class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -500,7 +515,9 @@
 
                                 <h2 class="projects-title">Text Utills</h2>
 
-                                <a target="_blank" href="https://psjcmv-3000.csb.app/" class="projects-button">
+                                <a target="_blank"
+                                    href="https://8218d760-adcd-44ab-b665-7a86b3b798d5-00-2n5693genvkbc.sisko.replit.dev/"
+                                    class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -528,7 +545,8 @@
 
                                 <h2 class="projects-title">Snake Game</h2>
 
-                                <a target="_blank" href="https://abdullahasif24.github.io/Snake-Game/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Snake-Game/"
+                                    class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -542,7 +560,9 @@
 
                                 <h2 class="projects-title">PDF Merger</h2>
 
-                                <a target="_blank" href="https://pdf-merger.abdullaha30.repl.co/" class="projects-button">
+                                <a target="_blank"
+                                    href="https://d6e33641-9494-439c-9f4b-5008bb4c7dd6-00-3nu63s1u8qytq.sisko.replit.dev/"
+                                    class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -556,7 +576,8 @@
 
                                 <h2 class="projects-title">Air Hockey Game</h2>
 
-                                <a target="_blank" href="https://abdullahasif24.github.io/Air-hockey-game/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Air-hockey-game/"
+                                    class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -570,7 +591,8 @@
 
                                 <h2 class="projects-title">Memory Card Game</h2>
 
-                                <a target="_blank" href="https://abdullahasif24.github.io/Memory-Card-Game/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Memory-Card-Game/"
+                                    class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -584,7 +606,8 @@
 
                                 <h2 class="projects-title">Rock Paper Scissor Game</h2>
 
-                                <a target="_blank" href="https://abdullahasif24.github.io/Rock-Paper-Scissor-Game/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Rock-Paper-Scissor-Game/"
+                                    class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -598,7 +621,83 @@
 
                                 <h2 class="projects-title">Watches Landing Page</h2>
 
-                                <a target="_blank" href="https://abdullahasif24.github.io/Watches-Landing-Page/" class="projects-button">
+                                <a target="_blank" href="https://abdullahasif24.github.io/Watches-Landing-Page/"
+                                    class="projects-button">
+                                    View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                            </div>
+                        </article>
+
+                        <article class="projects-card swiper-slide">
+                            <img src="Images/burger king.webp" alt="Projects Image" class="projects-img">
+
+                            <div class="projects-model">
+                                <span class="projects-subtitle">Web</span>
+
+                                <h2 class="projects-title">Burger King Clone</h2>
+
+                                <a target="_blank" href="https://abdullahasif24.github.io/Burger-king-clone/"
+                                    class="projects-button">
+                                    View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                            </div>
+                        </article>
+
+                        <article class="projects-card swiper-slide">
+                            <img src="Images/burger lab.webp" alt="Projects Image" class="projects-img">
+
+                            <div class="projects-model">
+                                <span class="projects-subtitle">Web</span>
+
+                                <h2 class="projects-title">Burger lab Clone</h2>
+
+                                <a target="_blank" href="https://abdullahasif24.github.io/Burger-lab-clone/"
+                                    class="projects-button">
+                                    View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                            </div>
+                        </article>
+
+                        <article class="projects-card swiper-slide">
+                            <img src="Images/ludo.png" alt="Projects Image" class="projects-img">
+
+                            <div class="projects-model">
+                                <span class="projects-subtitle">Web</span>
+
+                                <h2 class="projects-title">Ludo Game</h2>
+
+                                <a target="_blank" href="https://abdullahasif24.github.io/Ludo-Game/"
+                                    class="projects-button">
+                                    View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                            </div>
+                        </article>
+
+                        <article class="projects-card swiper-slide">
+                            <img src="Images/Netflix.jpg" alt="Projects Image" class="projects-img">
+
+                            <div class="projects-model">
+                                <span class="projects-subtitle">Web</span>
+
+                                <h2 class="projects-title">Netflix Clone</h2>
+
+                                <a target="_blank" href="https://abdullahasif24.github.io/Netflix-clone/"
+                                    class="projects-button">
+                                    View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                            </div>
+                        </article>
+
+                        <article class="projects-card swiper-slide">
+                            <img src="Images/Amazon.jpg" alt="Projects Image" class="projects-img">
+
+                            <div class="projects-model">
+                                <span class="projects-subtitle">Web</span>
+
+                                <h2 class="projects-title">Amazon Clone</h2>
+
+                                <a target="_blank" href="https://abdullahasif24.github.io/Amazon-Clone/"
+                                    class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
                             </div>
@@ -614,7 +713,9 @@
 
         <!--========================= Contact =========================-->
         <section class="contact" id="contact">
-            <h2 class="heading heading3" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">Contact <span class="heading-span2">Me!</span></h2>
+            <h2 class="heading heading3" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">Contact
+                <span class="heading-span2">Me!</span>
+            </h2>
 
             <form action="#" id="contact-form">
                 <div class="input-box">
@@ -652,7 +753,8 @@
                     <p id="contact-sent-message"></p>
                 </div>
 
-                <div class="btn-box btns btn-contact" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300" data-aos-once="true">
+                <div class="btn-box btns btn-contact" data-aos="fade-right" data-aos-duration="1000"
+                    data-aos-delay="300" data-aos-once="true">
                     <button type="submit" class="btn">Submit</button>
                 </div>
             </form>
@@ -709,7 +811,7 @@
     <!-- AOS Scroll reveal Animation js -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init({});
+        AOS.init({});
     </script>
 
     <script src="script.js"></script>
