adding meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="abdullah-developer-24, web developer, website, abdullah-developer">
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/Images/favicon.png">
 
@@ -697,6 +698,21 @@
                                 <h2 class="projects-title">Amazon Clone</h2>
 
                                 <a target="_blank" href="https://abdullahasif24.github.io/Amazon-Clone/"
+                                    class="projects-button">
+                                    View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                            </div>
+                        </article>
+
+                        <article class="projects-card swiper-slide">
+                            <img src="Images/olx.png" alt="Projects Image" class="projects-img">
+
+                            <div class="projects-model">
+                                <span class="projects-subtitle">Web</span>
+
+                                <h2 class="projects-title">OLX Clone</h2>
+
+                                <a target="_blank" href="https://abdullahasif24.github.io/olx-clone/"
                                     class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
