--- a/index.html
+++ b/index.html
@@ -726,6 +726,21 @@
                                 </a>
                             </div>
                         </article>
+
+                        <article class="projects-card swiper-slide">
+                            <img src="Images/burger point.png" alt="Projects Image" class="projects-img">
+
+                            <div class="projects-model">
+                                <span class="projects-subtitle">Web</span>
+
+                                <h2 class="projects-title">Burger Point Website</h2>
+
+                                <a target="_blank" href="https://abdullahasif24.github.io/Burger-point-website/"
+                                    class="projects-button">
+                                    View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                            </div>
+                        </article>
                     </div>
                 </div>
 
