--- a/index.html
+++ b/index.html
@@ -816,11 +816,11 @@
                     <i class="fa-brands fa-facebook-f"></i>
                 </a>
 
-                <a href="#" target="_blank" class="footer-social-link">
+                <a href="https://www.linkedin.com/in/abdullah-asif-b01b3b2bb" target="_blank" class="footer-social-link">
                     <i class="fa-brands fa-linkedin-in"></i>
                 </a>
 
-                <a href="#" target="_blank" class="footer-social-link">
+                <a href="03343512251" target="_blank" class="footer-social-link">
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
 
