--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!--===================== Navbar =====================-->
         <nav class="nav">
             <ul class="nav-content">
-                <span class="nav-logo">Developer</span>
+                <span class="nav-logo">Developed</span>
 
                 <i class="fa-solid fa-bars" id="menu-icon"></i>
 
