--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <link rel="stylesheet" href="style.css">
-    <title>PortFolio</title>
+    <title>Abdullah</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         <!--===================== Navbar =====================-->
         <nav class="nav">
             <ul class="nav-content">
-                <span class="nav-logo">Developed</span>
+                <span class="nav-logo">Portfolio</span>
 
                 <i class="fa-solid fa-bars" id="menu-icon"></i>
 
