update project section

--- a/index.html
+++ b/index.html
@@ -500,6 +500,22 @@
                         </article>
 
                         <article class="projects-card swiper-slide">
+                            <img src="Images/expense-tracker.jpeg" alt="expense-tracker"
+                                class="projects-img">
+
+                            <div class="projects-model">
+                                <span class="projects-subtitle">Web</span>
+
+                                <h2 class="projects-title">Expense Tracker</h2>
+
+                                <a target="_blank" href="https://expense-tracker-ashy-xi.vercel.app/home"
+                                    class="projects-button">
+                                    View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                            </div>
+                        </article>
+
+                        <article class="projects-card swiper-slide">
                             <img src="Images/project-headPhone.jpg" alt="Projects Image" class="projects-img">
 
                             <div class="projects-model">
@@ -516,21 +532,6 @@
                         </article>
 
                         <article class="projects-card swiper-slide">
-                            <img src="Images/project-tic_tac_toe" alt="Projects Image" class="projects-img">
-
-                            <div class="projects-model">
-                                <span class="projects-subtitle">Web</span>
-
-                                <h2 class="projects-title">Tic Tac Toe Game</h2>
-
-                                <a target="_blank" href="https://abdullahasif24.github.io/Tic-Tac-Toe-Game/"
-                                    class="projects-button">
-                                    View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                                </a>
-                            </div>
-                        </article>
-
-                        <article class="projects-card swiper-slide">
                             <img src="Images/project-textUtills.jpg" alt="Projects Image" class="projects-img">
 
                             <div class="projects-model">
@@ -539,7 +540,22 @@
                                 <h2 class="projects-title">Text Utills</h2>
 
                                 <a target="_blank"
-                                    href="https://8218d760-adcd-44ab-b665-7a86b3b798d5-00-2n5693genvkbc.sisko.replit.dev/"
+                                    href="https://text-utilities-6b4460d9l-abdullahs-projects-7e5ddc64.vercel.app/"
+                                    class="projects-button">
+                                    View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                            </div>
+                        </article>
+
+                        <article class="projects-card swiper-slide">
+                            <img src="Images/project-tic_tac_toe" alt="Projects Image" class="projects-img">
+
+                            <div class="projects-model">
+                                <span class="projects-subtitle">Web</span>
+
+                                <h2 class="projects-title">Tic Tac Toe Game</h2>
+
+                                <a target="_blank" href="https://abdullahasif24.github.io/Tic-Tac-Toe-Game/"
                                     class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
