--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                                 <h2 class="projects-title">Text Utills</h2>
 
                                 <a target="_blank"
-                                    href="https://text-utilities-6b4460d9l-abdullahs-projects-7e5ddc64.vercel.app/"
+                                    href="https://text-utilities-three.vercel.app/"
                                     class="projects-button">
                                     View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
